--- a/src/content/posts/cored20rpg/abilities-checks-skills.mdx
+++ b/src/content/posts/cored20rpg/abilities-checks-skills.mdx
@@ -13,7 +13,7 @@ author: Антон "Palant" Палихов
 
 # Характеристики, навыки, проверки
 
-## <a name="_toc158186317"></a>Бонус владения
+## Бонус владения
 
 У персонажей есть бонус владения, зависящий от уровня. У чудовищ тоже есть этот бонус, он уже включён в их блоки статистики. Этот бонус тоже используется в проверках характеристик, спасбросках и бросках атаки.
 
@@ -25,7 +25,7 @@ author: Антон "Palant" Палихов
 
 В общем случае, вы не умножаете свой бонус владения для бросков атаки или спасбросков. Если особенность или эффект позволяют это сделать, применяются те же правила.
 
-## <a name="_toc158186318"></a>Преимущество и помеха
+## Преимущество и помеха
 
 Иногда особое умение или заклинание гласит, что вы совершаете проверку характеристики, спасбросок или бросок атаки с преимуществом или помехой. Когда такое происходит, вы бросаете второй к20. Используйте наибольший результат, если у вас есть преимущество, и наименьший, если есть помеха. Например, если у вас есть помеха, и выпало «17» и «5», вы используете «5». Если бы у вас было преимущество, вы бы использовали «17».
 
@@ -37,13 +37,13 @@ author: Антон "Palant" Палихов
 
 Обычно преимущества и помехи вызваны особыми умениями, действиями или заклинаниями. Вдохновение также может дать персонажу преимущество. То Мастер тоже может решить, что обстоятельства положительно или негативно влияют на проверки и дать преимущество или помеху соответственно.
 
-## <a name="_toc158186319"></a>Ситуационный модификатор
+## Ситуационный модификатор
 
 Многие особенности персонажей дают им дополнительный бонус к проверкам в виде дополнительной кости 1к4. Такие ситуационные модификаторы складываются необычным образом – при сложении двух бонусов происходит увеличение размера кости на один – т.е. вместо 2к4 персонаж добавляет к броску 1к6, вместо 3к4 – 1к8 и т.д.
 
 Ситуационные модификаторы также могут создавать и штрафы для проверок. Сложите все позитивные и негативные кости ситуационных модификаторов вместе – и определите результирующую кость. Например, на персонажа три фактора влияли позитивным образом, а один – негативным. Итого значение костей ситуационного модификатора – два, что соответствует кости 1к6.
 
-## <a name="_toc158186320"></a><a name="_toc124356445"></a><a name="_toc127016343"></a>Критические успехи и провалы
+## Критические успехи и провалы
 
 Когда вы выбрасываете 20 при броске атаки к20, спасброске, проверке характеристики или навыка (до применения каких-либо модификаторов, бонусов и штрафов), это называется «естественным 20». Выпадение 1 при броске атаки к20, спасброске, проверке характеристики (до применения каких-либо модификаторов, бонусов и штрафов) называется «естественной 1».
 
@@ -59,9 +59,10 @@ author: Антон "Palant" Палихов
 
 Групповая критика. При выполнении групповой проверки критический успех достигается, если все члены группы преуспевают в своих проверках, а критический провал имеет место, если все члены группы терпят неудачу.
 
-` `Критические успехи и провалы также открывают возможности для дополнительных положительных и отрицательных последствий. Например, критическое попадание не только гарантирует успех, но и увеличивает урон от атаки (наносит двойной урон). По усмотрению Мастера, критический провал может также привести к осложнениям для атакующего, например, его оружие застрянет в деревянной двери, что потребует проверки характеристики, чтобы освободить его.
+```Критические успехи и провалы также открывают возможности для дополнительных положительных и отрицательных последствий. Например, критическое попадание не только гарантирует успех, но и увеличивает урон от атаки (наносит двойной урон). По усмотрению Мастера, критический провал может также привести к осложнениям для атакующего, например, его оружие застрянет в деревянной двери, что потребует проверки характеристики, чтобы освободить его.```
 
-## <a name="_toc158186321"></a>Три основных вида проверок
+
+## Три основных вида проверок
 
 В Core к20 RPG используются три основных вида проверок:
 
@@ -69,7 +70,7 @@ author: Антон "Palant" Палихов
 - Броски атаки
 - Спасброски
 
-## <a name="_toc158186322"></a>Общая механика проверок навыков
+## Общая механика проверок навыков
 
 Проверка навыка или характеристика испытывает врождённые таланты и обучение персонажа или чудовища, пытающегося преодолеть вызов. Мастер просит сделать проверку навыка или характеристики, когда персонаж или существо пытается выполнить действие (отличное от атаки), которое имеет шанс неудачного завершения. Когда исход неопределён, кости определяют результат.
 
@@ -117,7 +118,7 @@ author: Антон "Palant" Палихов
 
 Обычно владение навыком применяется к проверкам только одной конкретной характеристики. Владение Атлетикой, например, обычно применяется к проверкам Силы. Однако в некоторых ситуациях ваше владение может применяться к другой проверке. В таких ситуациях Мастер может попросить совершить проверку, используя необычную комбинацию характеристики и навыка, или же вы можете попросить у Мастера разрешение применить бонус владения к другой проверке. Например, если вам нужно доплыть от прибрежного острова до материка, ваш Мастер может потребовать проверки Телосложения, чтобы увидеть, есть ли у вас выносливость, чтобы сделать это так далеко. В этом случае Мастер может разрешить вам применить бонус от Атлетики, то есть попросит совершить проверку Атлетика (Телосложение). Поэтому, если вы владеете Атлетикой, вы применяете свой бонус к проверке Телосложения точно так же, как обычно делаете это для проверки Атлетика (Сила). Точно так же, если варвар полуорк демонстрирует грубую силу, чтобы запугать врага, Мастер может попросить совершить проверку Запугивание (Сила), несмотря на то, что Запугивание связано с Харизмой.
 
-### <a name="_toc127016346"></a>Основная механика
+### Основная механика
 
 Когда игрок объявляет действие, которое включает в себя желаемый результат и подход, ожидаемый для осуществления этого действия, **МАСТЕР** определяет результат и описывает результат.
 
@@ -163,7 +164,7 @@ author: Антон "Palant" Палихов
 
 Затем игра продолжается.
 
-### <a name="_toc127016347"></a>Последовательность
+### Последовательность
 
 1\. ИГРОК делает заявку описывая действия персонажа и чего он хочет достичь.
 
@@ -189,7 +190,7 @@ author: Антон "Palant" Палихов
 
 Ими могут быть статичные бонусы или штрафы.
 
-### <a name="_toc127016348"></a>Правило реакции
+### Правило реакции
 
 **МАСТЕР** может использовать правило реакции всякий раз, когда у персонажа есть момент, чтобы отреагировать на что-то неожиданное.
 
@@ -249,7 +250,7 @@ author: Антон "Palant" Палихов
 
 МАСТЕР говорит: “Хорошо, дайте мне дальний бросок атаки с преимуществом, так как гоблин в настоящее время не знает о вас.
 
-### <a name="_toc127016349"></a>Пассивные Проверки
+### Пассивные Проверки
 
 Пассивная проверка специальный вид проверки характеристики, которая не использует броски костей. Такая проверка может отражать средний результат для задачи, выполняющейся с регулярной периодичностью, например, поиски потайных дверей. Мастер может использовать её для тайного определения без бросков костей того, преуспеют ли персонажи в чём-либо, например, заметят ли персонажи скрывшееся чудовище.
 
@@ -281,7 +282,7 @@ author: Антон "Palant" Палихов
 
 Любой бонус, который может быть предоставлен броску навыков, например, от Вдохновения Барда или от заклинания благословения Клерика, также может быть применен к Пассивным Навыкам.
 
-### <a name="_toc127016350"></a>Состязания
+### Состязания
 
 Иногда усилия одного персонажа или существа противостоят усилиям другого. Это может произойти если они пытаются сделать одно и то же, и преуспеть может только один, например, они пытаются схватить магическое кольцо, упавшее на пол. Такая же ситуация возникает , когда один из них пытается помешать другому достичь цели— например, когда чудовище пытается силой открыть дверь, которую авантюрист держит закрытой. В таких ситуациях исход определяется особой проверкой характеристики, называемой состязанием.
 
@@ -297,7 +298,7 @@ author: Антон "Palant" Палихов
 
 Любой бонус, который может быть предоставлен броску навыков цели, например, от Вдохновения Барда или от заклинания благословения Клерика, также может быть применен к КС.
 
-### <a name="_toc127016351"></a>Совместные попытки Работаем Вместе
+### Совместные попытки (Работаем Вместе)
 
 Когда два или более персонажа работают вместе для выполнения одной и той же задачи, персонаж с более высоким суммарным модификатором проверки навыка возглавляет усилия.
 
@@ -315,7 +316,7 @@ author: Антон "Palant" Палихов
 
 Групповые проверки возникают не очень часто, и они наиболее полезны, когда все персонажи преуспевают или терпят неудачу как группа. Например, когда авантюристы путешествуют по болоту, Мастер может призвать к групповой проверке Выживания (Мудрость), чтобы увидеть, могут ли персонажи избежать зыбучих песков, провалов и других природных опасностей окружающей среды. Если преуспеет как минимум половина группы, успешные персонажи помогают тем, кто не обошёл опасные места. В противном случае вся группа попадает в одну из опасностей.
 
-### <a name="_toc127016352"></a>Групповые проверки
+### Групповые проверки
 
 Когда несколько персонажей пытаются выполнить что-то в группе, **МАСТЕР** может вызвать групповую проверку.
 
@@ -335,13 +336,13 @@ author: Антон "Palant" Палихов
 
 **Бонусы, штрафы.** Преимущества и помехи обычно применяются к персонажу, делающему проверку, но они должны применяться только после того, как МАСТЕР определит, какой игрок делает проверку.
 
-### <a name="_toc127016353"></a>Тайные проверки
+### Тайные проверки
 
 Тайные проверки совершаются игроком или мастером за персонажа таким образом чтобы игрок не знал значения проверки.
 
-## <a name="_toc158186323"></a>Использование характеристик
+## Использование характеристик
 
-## <a name="_toc158186324"></a>Навыки
+## Навыки
 
 Характеристики покрывают широкий диапазон возможностей, включая навыки, которыми персонаж или чудовище может владеть. Навык отражает некий аспект характеристики, а владение навыком демонстрирует сосредоточенность на этом аспекте (владения навыками персонажа определяются при его создании, а владения навыками чудовища написаны в блоке его статистики).
 
@@ -405,7 +406,7 @@ author: Антон "Palant" Палихов
 
 Например, если персонаж пытается забраться на крутой утёс, Мастер может попросить совершить проверку Силы (Атлетика). Если персонаж владеет навыком Атлетика, бонус владения персонажа добавляется к проверке силы. Если персонаж не имеет этого навыка, он или она просто делает проверку силы.
 
-## <a name="_toc127016425"></a><a name="_toc158186325"></a>Первичные навыки
+## Первичные навыки
 
 **Важность различных навыков среди участников**
 
@@ -427,13 +428,13 @@ author: Антон "Palant" Палихов
 
 Любой навык можно использовать с любой проверкой характеристики, хотя некоторые комбинации встречаются чаще, чем другие. Например, навык Обмана обычно используется с проверками характеристик Харизмы, хотя персонаж, который пытается закодировать письменное сообщение, может вместо этого сделать проверку Интеллекта, используя навык Обман.
 
-Иногда Мастер попросит провести проверку характеристики, используя определенный навык – проверку навыка: например, «Пройти проверку Обмана (Харизма». В других случаях Мастер может попросить провести проверку характеристики, а игрок может спросить, применим ли к проверке один из его навыков. Мастер является единственным арбитром того, какой навык, если таковой имеется, применяется к проверке характеристики. В правилах иногда упоминается проверка с навыком, но без указания характеристики — например, «Ваш персонаж имеет преимущество на проверки Обмана». Это относится ко всем проверкам характеристик с использованием навыка Обман, независимо от того, какой показатель характеристики используется.
+Иногда Мастер попросит провести проверку характеристики, используя определенный навык – проверку навыка: например, «Пройти проверку Обмана (Харизма)». В других случаях Мастер может попросить провести проверку характеристики, а игрок может спросить, применим ли к проверке один из его навыков. Мастер является единственным арбитром того, какой навык, если таковой имеется, применяется к проверке характеристики. В правилах иногда упоминается проверка с навыком, но без указания характеристики — например, «Ваш персонаж имеет преимущество на проверки Обмана». Это относится ко всем проверкам характеристик с использованием навыка Обман, независимо от того, какой показатель характеристики используется.
 
-## <a name="_toc158186326"></a>Вторичные навыки
+## Вторичные навыки
 
 Вторичные навыки включают в себя все навыки ношения доспехов, владения оружием, инструментами, музыкальными инструментами, игровыми наборами, управления транспортом и владение языками.
 
-### <a name="_toc82572130"></a>Группы Вторичных Навыков
+### Группы Вторичных Навыков
 
 • Верховые животные
 
@@ -534,7 +535,7 @@ author: Антон "Palant" Палихов
 
 • естествознание, включая знания о местности, растениях и животных, погоде и природных циклах
 
-• Планарные знания, включая знания о планах существования, полупланах и планарной механике
+• Планарные знания, включая знания о планах существования, подпланах и планарной механике
 
 • политические знания, включая знания о королевствах, правителях, придворном этикете, а также родословных, девизах и эмблемах знатных домов.
 
@@ -570,23 +571,19 @@ author: Антон "Palant" Палихов
 
 Навыки, описанные ниже, позволят вам узнать много нового о мире. Функционально они все одинаковы, хотя информация, которую они предоставляют, весьма разнообразна. Ниже приведено руководство, как ДМы могут установить DC, на примере драконов.
 
-DC Тип знания Пример
+|  DC | Тип знания           | Пример                                                                                                                       |
+| --: | -------------------- | :--------------------------------------------------------------------------------------------------------------------------- |
+|   5 | Очень распространено | Драконы опасны, обладают дыхательным оружием и летают.                                                                       |
+|  10 | Обычное              |                                                                                                                              |
+|  15 | Необычное            | Цвет дракона также определяет его устойчивость или невосприимчивость к той же стихии. Иногда драконы являются заклинателями. |
+|  20 | Редкое               | Драконы определенного цвета, согласно документам, используют особые заклинания или особые легендарные действия.              |
+|  25 | Очень редкое         | Старшие драконы обладают легендарными действиями в логове, когда встречаются в своем логове.                                 |
+|  30 | Эпический            |                                                                                                                              |
 
-5 Очень распространено Драконы опасны, обладают дыхательным оружием и летают.
 
-10 Обычное
+Очевидно, что ДМ должен сам определить, насколько редкой является информация для его мира, но вот хорошее эмпирическое правило. Простолюдины знают вещи с DC 5-10. Образованные люди знают вещи DC 10-15. Ученые знают вещи DC 15-20, а эксперты (люди, специализирующиеся на данной области знаний) знают вещи DC 20+.
 
-15 Необычное Необычное знание, которое большинство людей не знает. Цвет дракона также определяет его устойчивость или невосприимчивость к той же стихии. Иногда драконы являются заклинателями.
-
-20 Редкие драконы определенного цвета, согласно документам, используют особые заклинания или особые легендарные действия.
-
-25 Очень редкие Старшие драконы обладают легендарными действиями в логове, когда встречаются в своем логове.
-
-30 Эпический
-
-Очевидно, что ДМ должен сам определить, насколько редкой является информация для его мира, но вот хорошее эмпирическое правило. Простолюдины знают вещи с DC 5-10. Образованные люди знают вещи DC 1 0¬1 5. Ученые знают вещи DC 15-20, а эксперты (люди, специализирующиеся на данной области знаний) знают вещи DC 20+.
-
-### <a name="_toc127016460"></a>Прочее
+### Прочее
 
 #### **Осадная инженерия**
 
@@ -606,7 +603,7 @@ DC Тип знания Пример
 
 #### **Руководство оружием**
 
-Персонаж может обучать солдат военной дисциплине, физической подготовке и владению оружием. Если персонаж один раз выберет "Наставление по оружию", он сможет зарабатывать 25 гп в месяц, обучая легкую пехоту.
+Персонаж может обучать солдат военной дисциплине, физической подготовке и владению оружием. Если персонаж один раз выберет "Наставление по оружию", он сможет зарабатывать 25 зм в месяц, обучая легкую пехоту.
 
 Для превращения новобранцев в легкую пехоту требуется 1 месяц.
 
@@ -642,7 +639,7 @@ DC Тип знания Пример
 
 Если у вас нет к нему доступа, то пусть Мастер определит длительность тренировки (примеры: 60 дней для владения оружием, 120 дней для обучения владения инструментами ремесленника, 250 дней для обучения владения специфическими инструментами и 300 дней для первичных навыков). Во время этого времени простоя вашему персонажу также необходимо дополнительно оплачивать услуги учителя в размере 2 зм в день.
 
-## <a name="_toc158186327"></a>Опциональное правило: Очки навыков
+## Опциональное правило: Очки навыков
 
 Очки навыка – это опциональное правило, которое позволяет учесть различную стоимость навыков владения инструментами и сложность изучения разных языков при создании и развитии персонажа.
 
@@ -652,7 +649,7 @@ DC Тип знания Пример
 
 Для этого нам также пришлось сделать некоторые допущения, основываясь на наших впечатлениях от многих и многих игр, которые задают относительную ценность различных навыков владения чем-либо.
 
-<a name="_toc82572125"></a>Наши допущения
+### Наши допущения
 
 1\. Инструменты ремесленников более ценны нежели музыкальные инструменты.
 
@@ -668,7 +665,7 @@ DC Тип знания Пример
 
 7\. Экзотические языки более ценны нежели стандартные
 
-<a name="_toc82572126"></a>Определение дискретной стоимости различных вторичных навыков
+### Определение дискретной стоимости различных вторичных навыков
 
 Для определения их дискретной стоимости мы отталкивались от черт, приведенных в Player’s Handbook и Xanathar’s Guide to Everything, а именно.
 
@@ -702,7 +699,7 @@ DC Тип знания Пример
 
 С учетом допущений навык владения языком должен стоить дороже, поэтому навык владения языком будет стоить 4+1 = 5 очков владения.
 
-Навык владения экзотическим языком еще более ценен, поэтому он будет стоить 5\*2=10 очков владения
+Навык владения экзотическим языком еще более ценен, поэтому он будет стоить 5×2=10 очков владения
 
 Первичный навык = 1/3 черты = 8 очков владения
 
@@ -712,11 +709,11 @@ DC Тип знания Пример
 
 ### Влияние Интеллекта на дополнительные очки навыка при создании персонажа
 
-При создании персонажа, после определения стартовых расы, предыстории, класса и распределения характеристик персонаж получает дополнительные 3 очка владения навыками за каждую единицу Интеллекта свыше 10. Например, персонаж орк Борис с Интеллектом равным 14 получит (14-10)\*3=4\*3=12 дополнительных очков навыка.
+При создании персонажа, после определения стартовых расы, предыстории, класса и распределения характеристик персонаж получает дополнительные 3 очка владения навыками за каждую единицу Интеллекта свыше 10. Например, персонаж орк Борис с Интеллектом равным 14 получит (14-10)×3=4×3=12 дополнительных очков навыка.
 
-Вариантное правило: Зависимость очков навыка от модификатора Интеллекта.
+#### Вариантное правило: Зависимость очков навыка от модификатора Интеллекта.
 
-При создании персонажа, после определения стартовых расы, предыстории, класса и распределения характеристик персонаж получает дополнительные 6 очков владения навыками за каждую положительную единицу модификатора Интеллект. Например, персонаж орк Борис с Интеллектом равным 14 получит 2\*6=12 дополнительных очков навыка.
+При создании персонажа, после определения стартовых расы, предыстории, класса и распределения характеристик персонаж получает дополнительные 6 очков владения навыками за каждую положительную единицу модификатора Интеллект. Например, персонаж орк Борис с Интеллектом равным 14 получит 2×6=12 дополнительных очков навыка.
 
 ### Влияние Интеллекта на дополнительные очки навыка при повышении уровней
 
@@ -726,15 +723,15 @@ DC Тип знания Пример
 
 **Таблица 97.**
 
-| Тип навыка               | Стоимость, очков навыка | Время изучения, дней |
-| ------------------------ | ----------------------- | -------------------- |
-| Стандартный язык         | 5                       | 250                  |
-| Экзотический язык        | 10                      | 350                  |
-| Специальные инструменты  | 5                       | 250                  |
-| Инструменты ремесленника | 4                       | 250                  |
-| Музыкальные инструменты  | 3                       | 250                  |
-| Игровые наборы           | 2                       | 125                  |
-| Прочее                   | Различная               | Различная            |
+|               Тип навыка | Стоимость, очков навыка | Время изучения, дней |
+| -----------------------: | :---------------------: | -------------------- |
+|         Стандартный язык |            5            | 250                  |
+|        Экзотический язык |           10            | 350                  |
+|  Специальные инструменты |            5            | 250                  |
+| Инструменты ремесленника |            4            | 250                  |
+|  Музыкальные инструменты |            3            | 250                  |
+|           Игровые наборы |            2            | 125                  |
+|                   Прочее |        Различная        | Различная            |
 
 ### Вариантное правило: очки навыка от класса персонажа
 
