Fix alchemical items and substances

--- a/src/content/posts/cored20rpg/alchemical-items-and-substances.mdx
+++ b/src/content/posts/cored20rpg/alchemical-items-and-substances.mdx
@@ -63,9 +63,9 @@ tags:
 
 **Алхимическое серебро:** Алхимическое серебро создается путем аффинажа обычного серебра, которое разбивается в металлургическом тигле, очищается в соответствии с алхимическими принципами, а затем превращается в небольшой слиток весом в один фунт. Алхимическое серебро выглядит как жидкое серебро, но при этом оно полностью твердое, и оно одновременно тверже и легче обычного серебра. Лунные свойства этого металла усиливаются в результате алхимического рафинирования, что приводит его в более тесное соответствие с Луной.
 
-**Алхимическое серебро, Филигранные доспехи:** Доспехи с филигранным алхимическим серебром защищают владельца от разрушительного действия пламени и света, давая +1 КЗ против атак, наносящих лучистый или огненный урон, и +1 к спасброскам против эффектов, наносящих лучистый или огненный урон. Серебряные доспехи (250 gp за фунт доспехов): Любая металлическая броня может быть изготовлена из алхимического серебра. В результате получается очень экстравагантный доспех, который всегда холодный и дает устойчивость ко всем лучистым и огненным повреждениям. Доспехи также обладают эффектом свойства магических предметов "Умеренность".
+**Алхимическое серебро, Филигранные доспехи:** Доспехи с филигранным алхимическим серебром защищают владельца от разрушительного действия пламени и света, давая +1 КЗ против атак, наносящих лучистый или огненный урон, и +1 к спасброскам против эффектов, наносящих лучистый или огненный урон. Серебряные доспехи (250 gp за фунт доспехов): Любая металлическая броня может быть изготовлена из алхимического серебра. В результате получается очень экстравагантный доспех, который всегда холодный и дает устойчивость ко всем лучистым и огненным повреждениям. Доспехи также обладают эффектом малого свойства магических предметов "Умеренность" (Книга Мастера 2014, Владельцу не причиняется никакого вреда при температуре от -20 до 120 градусов по Фаренгейту.).
 
-**Серебряное оружие:** Оружие, изготовленное из алхимического серебра, почти всегда зачаровано. Даже само по себе оно наносит 1 очко дополнительного психического урона всем раненным им существам; если эти существа специально уязвимы к серебряному оружию, то вместо этого они наносят + 1к4 психического урона. Известно, что гитианки используют алхимическое серебро для создания своих серебряных мечей, вызывающих справедливый страх.
+**Серебряное оружие:** Оружие, изготовленное из алхимического серебра, почти всегда зачаровано. Даже само по себе оно наносит 1 очко дополнительного психического урона всем раненным им существам; если эти существа специально уязвимы к серебряному оружию, то вместо этого они наносят + 1к4 психического урона. Известно, что гитиянки используют алхимическое серебро для создания своих серебряных мечей, вызывающих справедливый страх.
 
 **Зачарование магических предметов:** Алхимическое серебро - отличный материал для создания магических предметов, быстро и эффективно принимающий и удерживающий чары. За каждые 50 зм алхимического серебра, использованного при создании магического предмета, общее время его создания сокращается на один день (или на два дня, если предмет связан с холодом, прорицанием или оборотничеством). Максимум это может сократить необходимое время вдвое. Эти затраты превышают все остальные затраты на создание магического предмета. Затраты на использование филигранных или серебряных доспехов засчитываются в это уменьшение.
 
