--- a/src/content/posts/translations/lands-lords-ladies.mdx
+++ b/src/content/posts/translations/lands-lords-ladies.mdx
@@ -158,9 +158,7 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 > ### Шир Яллис
 > Шир Яллис в королевстве Адар будет нашим примером для дальнейших разделов. Он располагается на территории площадью 13 квадратных миль, большую часть которой занимает густой лес, хотя один из углов переходит в гористую местность. В нём находятся два манора.
-
 > Площадь основного манора Яллис составляет 1472 акра, из которых около 78% приходится на пахотные земли — 1148 акров, ещё 12% — на луга и пастбища — 178 акров. Из оставшихся 146 акров около 30 акров используются для поддержания деревни, 70 акров лорд отводит под свои личные владения, а последние 46 акров отведены под строительство церкви.
-
 > Второй манор в горном уголке Яллиса — 386 акров земли, из них 188 акров пашни, 164 акра пастбищ и 34 акра для деревни. Остальная часть манора представляет собой гористую местность с существующим железным рудником, который можно разрабатывать.
 
 
@@ -211,9 +209,7 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 > ### Яллис — Сельские угодья
 > В основном маноре Яллис лорд оставляет 240 акров для собственных нужд, 54 акра отдаёт йоменам, а остальные 854 акра используются как земли для 72 крестьянских семей, в общей сложности около 320 крепостных.
-
 > Во втором маноре лорд оставит себе только 48 акров, чтобы выращивать корм для скота, который там содержится. Остальное будет распределено между 60 семьями крепостных в этом маноре, вероятно, также для корма скота. Из-за качества почвы жители здесь платят всего 3 серебряника за акр.
-
 > В Яллисе слишком тепло, чтобы выращивать картофель, поэтому на полях обычно сажают около 74% зерна, 24% бобовых, а остальное — разные культуры, такие как лён или другие полезные культуры. В среднем за год лорд манора может собрать около 49 725 фунтов зерна, 4 600 фунтов бобов, 1 400 фунтов льна, а также небольшое количество различных других культур. Излишки зерна, около 15% урожая, лорд продаст за 77 золотых. Он также соберёт 3836 серебряных монет в виде дани с обоих маноров.
 
 
@@ -274,7 +270,6 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 > ### Яллис — Скот
 > В основном маноре лорд Яллиса держит своего боевого коня, двух тягловых и четырёх ездовых лошадей, 11 голов крупного рогатого скота и 28 овец. В своём владении лорд также держит 10 свиноматок и 85 кур круглый год. Скот потребляет около 39 720 фунтов корма в год и использует 93 акра пастбищ. После удовлетворения собственных потребностей лорд может заработать около 312 золотых.
-
 > Второй манор занимает ещё 164 акра пастбищ. В этом скалистом маноре лорд держит ещё 36 овец, которые потребляют весь корм, выращенный лордом в этом маноре, и приносят ему дополнительно 144 золотых.
 
 
@@ -433,14 +428,9 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 
 > ### Яллис — Производства
-> В основном маноре Яллис проживает около 350 человек. Это означает, что там можно ожидать 1,75 мельницы, 3,5 пекарен, 2,8 пивоварен, 1,4 скотобойнь, 1,17 кузниц, 1 сыроварен, 0,875 домов плотника, 0,7 дубилен и 1 стригальня. Учитывая структуру манора, мы получим 2 мельницы, 4 пекарни, 3 пивоваренных, 1 скотобойню, 1 сыроварню, 1 кузницу, 1 плотницкую и 1 стринальню.
-
+> В основном маноре Яллис проживает около 350 человек. Это означает, что там можно ожидать 1,75 мельницы, 3,5 пекарен, 2,8 пивоварен, 1,4 скотобойнь, 1,17 кузниц, 1 сыроварен, 0,875 домов плотника, 0,7 дубилен и 1 стригальня. Учитывая структуру манора, мы получим 2 мельницы, 4 пекарни, 3 пивоваренных, 1 скотобойню, 1 сыроварню, 1 кузницу, 1 плотницкую и 1 стригальню.
 > Второй манор Яллис немного меньше, его население составляет около 290 человек, что позволяет ожидать 1,45 мельницы, 2,9 пекарни, 2,32 пивоварни, 1,16 скотобойни, 0,97 кузни, 0,83 сыроварни, 0,73 домов плотника, 0,58 дубильни и 0,83 стригальни. Поскольку доминируют скотоводы и шахтёры, и нет реального источника энергии для мельницы, мы скажем, что есть 2 мясника, 3 кузнеца (2 из них плавильщики), 1 сыровар, 1 дубильщик и 1 стригаль.
-
 > Лорд Яллиса получит в общей сложности 1 650 золотых в виде арендной платы с различных производств в обоих манорах.
-
-
-
 
 
 
@@ -465,7 +455,6 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 > ### Яллис — Поместье лорда
 > Личное поместье лорда занимает 70 акров на территории основного манора. На этих землях лорд построил свой дом с декоративным и огородным садом. Также в поместье есть небольшой фруктовый сад площадью 10 акров.
-
 > В среднем за год лорд получает 250 золотых от продажи сидра и крепких напитков, 66 золотых в виде штрафов и пеней от вершения правосудия над 132 семьями, проживающими в двух манорах, и ещё 11 золотых в виде различных доходов в течение года.
 
 
@@ -482,7 +471,7 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 Таблица 10: Предполагаемая стоимость укреплений
 
-| Чин дворянина | Cтоимость содержания |
+| Чин дворянина | Стоимость содержания |
 | :-----------: | :------------------: |
 |    Джентри    |        15 500        |
 |     Барон     |        30 000        |
@@ -556,11 +545,8 @@ cover: ~assets/covers/lands-lords-ladies.png
 
 > ### Яллис — Траты
 > Будучи членом джентри, лорд Яллиса платит лишь 280 золотых за различные светские мероприятия и 750 золотых своему сеньору в качестве щитовых денег. Его большое поместье обходится ему примерно в 800 золотых в год, а также около 110 золотых от отдаёт в качестве милостыни.
-
 > В качестве платы своему религиозному советнику лорд предоставляет ему 46 акров земли, на которых можно построить церковь. Его распорядитель получает 20 акров в качестве платы за свои услуги, и по 17 акров достается двум патрульным в двух манорах. Лорд дополнительно платит чародею, консультирующему его по вопросам магии, бейлифу, смотрителю ферм и камердинеру, что в общей сложности обходится ему в 1 400 золотых за их услуги.
-
 > Лорд также нанимает дюжину стражников, размещенных вокруг поместья, и четырнадцать слуг, которые обходятся лорду в 1 320 золотых в качестве жалованья.
-
 > Общий доход лорда составляет в среднем 4 894 золотых, в то время как его годовые расходы - около 4 660 золотых. Оставшиеся 234 золотых часто откладываются на черный день, используются для финансирования улучшений поместья, а также на дополнительные светские мероприятия, чтобы усилить влияние и благосклонность лорда в королевстве.
 
 ---
