--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -12,6 +12,13 @@ links:
 
 ---
 
+## БЫСТРЫЕ ССЫЛКИ
+
+[Создатель чудовищ](https://monstermaker.cyborgsandmages.com/) - веб-приложение для создания чудовищ для пятой редакции
+
+[RSS](/rss.xml) - список всех страниц и постов сайта
+
+
 ## Текущие проекты
 
 ### Размещение полезных переводов и ресурсов на сайте
@@ -45,3 +52,7 @@ links:
 На всю нашу деятельность расходуются ресурсы и время.
 
 Как поддержать нашу деятельность вы можете узнать в разделе [Поддержать проект](/support-us)
+
+[PATREON](http://patreon.com/palikhov/)
+
+[BOOSTY](https://boosty.to/cyborgsandmages)
