--- a/src/content/posts/core-d20/bestiary-dire-template.mdx
+++ b/src/content/posts/core-d20/bestiary-dire-template.mdx
@@ -6,9 +6,9 @@ tags:
   - Бестиарий
   - D&D 5e
   - Лютый
-  - Лютый волк
-  - Шаблон
+  - Шаблон существа
   - Core d20 RPG
+  - D&D 5e
 ---
 
 Шаблон Лютого зверя был одним из самых ходовых в 3.5 редакции, но к сожалению в 5-ой редакции он в официальном Бестиарии отсутствует.
