--- a/src/content/posts/core-d20/bestiary-skeleton-template.mdx
+++ b/src/content/posts/core-d20/bestiary-skeleton-template.mdx
@@ -6,10 +6,8 @@ tags:
   - Бестиарий
   - Core d20 RPG
   - D&D 5e
-  - Шаблоны
-  - Шаблон
-  - Скелет
----
+  - Шаблон существа
+ ---
 
 ## ШАБЛОН СКЕЛЕТА
 
