--- a/src/content/posts/core-d20/bestiary-warbeast-template.mdx
+++ b/src/content/posts/core-d20/bestiary-warbeast-template.mdx
@@ -4,11 +4,9 @@ description: "АВТОРСКАЯ ЗАМЕТКА про создание шабл
 date: "2023-11-03"
 tags:
   - Бестиарий
-  - D&D 5e
-  - Военный зверь
-  - Боевой зверь
-  - Шаблон
   - Core d20 RPG
+  - D&D 5e
+  - Шаблон существа
 ---
 
 Боевой зверь - это существо, рожденное и выращенное для использования в качестве верхового животного. Выведенные для исключительной силы, агрессивности и уверенности в ногах, эти существа отличаются мощным телосложением, волевым характером и открытой воинственностью.
